# Colorisation

./: .gitignore  CMakeLists.txt  README.md
include/: WelshColorisation.hpp
lib/: CMakeLists.txt  Makefile
lib/include/: WelshColorisation.hpp
lib/src/: WelshColoration.cpp  WelshColoration.hpp  WelshColorisation.cpp  WelshColorisation.hpp  test.cpp
src/: WelshColorisation.cpp  psnr.py
